<?xml version="1.0"?>
<package format="3">
  <name>image_to_v4l2loopback</name>
  <version>0.1.0</version>
  <description>Publish ROS images into a virtual v4l2 video device</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lucasw/image_to_v4l2loopback</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_cmake_auto</depend> <!-- Optional, for simplifying dependency management -->

  <depend>cv_bridge</depend> <!-- Used as <depend> for simplicity, covers build, export, and exec -->
  <depend>image_transport</depend>
  <depend>rclcpp</depend> <!-- roscpp is replaced by rclcpp in ROS2 -->
  <!-- roslint is not a common dependency in ROS2, consider using ament_lint_auto for linting -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend> <!-- Optional, for linting -->
  <test_depend>ament_lint_common</test_depend> <!-- Optional, common linters -->
  
  <export>
    <build_type>ament_cmake</build_type> 
  </export>
</package>
